--- a/tests/integration/extensions/cassettes/test_llama_index/TestLlamaIndex.test_llama_index_stream_chat.yaml
+++ b/tests/integration/extensions/cassettes/test_llama_index/TestLlamaIndex.test_llama_index_stream_chat.yaml
@@ -29,69 +29,69 @@ interactions:
       string: 'retry: 3000
 
 
-        data: {"id":"12553bdf-3cfd-4b11-bd7b-286755213aae","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:15.927Z","results":[{"generated_text":"","generated_token_count":0,"input_token_count":130,"stop_reason":"not_finished","seed":689128061}],"conversation_id":"b930f8a3-86e2-4a05-82a4-c69431ecefa7"}
+        data: {"id":"a4cf4e1a-6f8b-4131-a4a0-14e40e58a2b3","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:07.499Z","results":[{"generated_text":"","generated_token_count":0,"input_token_count":130,"stop_reason":"not_finished","seed":1374000926}],"conversation_id":"a38cfe5a-3466-4941-9005-ad7912c073e2"}
 
 
-        data: {"id":"12553bdf-3cfd-4b11-bd7b-286755213aae","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:15.979Z","results":[{"generated_text":"Neuro","generated_token_count":1,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"b930f8a3-86e2-4a05-82a4-c69431ecefa7"}
+        data: {"id":"a4cf4e1a-6f8b-4131-a4a0-14e40e58a2b3","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:07.558Z","results":[{"generated_text":"N","generated_token_count":1,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"a38cfe5a-3466-4941-9005-ad7912c073e2"}
 
 
-        data: {"id":"12553bdf-3cfd-4b11-bd7b-286755213aae","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:16.001Z","results":[{"generated_text":"-","generated_token_count":2,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"b930f8a3-86e2-4a05-82a4-c69431ecefa7"}
+        data: {"id":"a4cf4e1a-6f8b-4131-a4a0-14e40e58a2b3","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:07.589Z","results":[{"generated_text":"LP","generated_token_count":2,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"a38cfe5a-3466-4941-9005-ad7912c073e2"}
 
 
-        data: {"id":"12553bdf-3cfd-4b11-bd7b-286755213aae","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:16.021Z","results":[{"generated_text":"linguistic","generated_token_count":3,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"b930f8a3-86e2-4a05-82a4-c69431ecefa7"}
+        data: {"id":"a4cf4e1a-6f8b-4131-a4a0-14e40e58a2b3","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:07.617Z","results":[{"generated_text":"
+        refer","generated_token_count":3,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"a38cfe5a-3466-4941-9005-ad7912c073e2"}
 
 
-        data: {"id":"12553bdf-3cfd-4b11-bd7b-286755213aae","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:16.040Z","results":[{"generated_text":"
-        programming","generated_token_count":4,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"b930f8a3-86e2-4a05-82a4-c69431ecefa7"}
+        data: {"id":"a4cf4e1a-6f8b-4131-a4a0-14e40e58a2b3","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:07.648Z","results":[{"generated_text":"s","generated_token_count":4,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"a38cfe5a-3466-4941-9005-ad7912c073e2"}
 
 
-        data: {"id":"12553bdf-3cfd-4b11-bd7b-286755213aae","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:16.062Z","results":[{"generated_text":"
-        is","generated_token_count":5,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"b930f8a3-86e2-4a05-82a4-c69431ecefa7"}
+        data: {"id":"a4cf4e1a-6f8b-4131-a4a0-14e40e58a2b3","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:07.680Z","results":[{"generated_text":"
+        to","generated_token_count":5,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"a38cfe5a-3466-4941-9005-ad7912c073e2"}
 
 
-        data: {"id":"12553bdf-3cfd-4b11-bd7b-286755213aae","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:16.080Z","results":[{"generated_text":"
-        ","generated_token_count":6,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"b930f8a3-86e2-4a05-82a4-c69431ecefa7"}
+        data: {"id":"a4cf4e1a-6f8b-4131-a4a0-14e40e58a2b3","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:07.707Z","results":[{"generated_text":"
+        models","generated_token_count":6,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"a38cfe5a-3466-4941-9005-ad7912c073e2"}
 
 
-        data: {"id":"12553bdf-3cfd-4b11-bd7b-286755213aae","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:16.100Z","results":[{"generated_text":"a","generated_token_count":7,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"b930f8a3-86e2-4a05-82a4-c69431ecefa7"}
+        data: {"id":"a4cf4e1a-6f8b-4131-a4a0-14e40e58a2b3","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:07.737Z","results":[{"generated_text":"
+        of","generated_token_count":7,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"a38cfe5a-3466-4941-9005-ad7912c073e2"}
 
 
-        data: {"id":"12553bdf-3cfd-4b11-bd7b-286755213aae","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:16.120Z","results":[{"generated_text":"
-        behavioral","generated_token_count":8,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"b930f8a3-86e2-4a05-82a4-c69431ecefa7"}
+        data: {"id":"a4cf4e1a-6f8b-4131-a4a0-14e40e58a2b3","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:07.767Z","results":[{"generated_text":"
+        behavior","generated_token_count":8,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"a38cfe5a-3466-4941-9005-ad7912c073e2"}
 
 
-        data: {"id":"12553bdf-3cfd-4b11-bd7b-286755213aae","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:16.140Z","results":[{"generated_text":"
-        approach","generated_token_count":9,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"b930f8a3-86e2-4a05-82a4-c69431ecefa7"}
+        data: {"id":"a4cf4e1a-6f8b-4131-a4a0-14e40e58a2b3","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:07.796Z","results":[{"generated_text":",","generated_token_count":9,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"a38cfe5a-3466-4941-9005-ad7912c073e2"}
 
 
-        data: {"id":"12553bdf-3cfd-4b11-bd7b-286755213aae","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:16.159Z","results":[{"generated_text":"
-        used","generated_token_count":10,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"b930f8a3-86e2-4a05-82a4-c69431ecefa7"}
+        data: {"id":"a4cf4e1a-6f8b-4131-a4a0-14e40e58a2b3","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:07.826Z","results":[{"generated_text":"
+        communication","generated_token_count":10,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"a38cfe5a-3466-4941-9005-ad7912c073e2"}
 
 
-        data: {"id":"12553bdf-3cfd-4b11-bd7b-286755213aae","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:16.179Z","results":[{"generated_text":"
-        to","generated_token_count":11,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"b930f8a3-86e2-4a05-82a4-c69431ecefa7"}
+        data: {"id":"a4cf4e1a-6f8b-4131-a4a0-14e40e58a2b3","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:07.856Z","results":[{"generated_text":"
+        and","generated_token_count":11,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"a38cfe5a-3466-4941-9005-ad7912c073e2"}
 
 
-        data: {"id":"12553bdf-3cfd-4b11-bd7b-286755213aae","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:16.199Z","results":[{"generated_text":"
-        communicate","generated_token_count":12,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"b930f8a3-86e2-4a05-82a4-c69431ecefa7"}
+        data: {"id":"a4cf4e1a-6f8b-4131-a4a0-14e40e58a2b3","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:07.886Z","results":[{"generated_text":"
+        language","generated_token_count":12,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"a38cfe5a-3466-4941-9005-ad7912c073e2"}
 
 
-        data: {"id":"12553bdf-3cfd-4b11-bd7b-286755213aae","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:16.218Z","results":[{"generated_text":"
-        with","generated_token_count":13,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"b930f8a3-86e2-4a05-82a4-c69431ecefa7"}
+        data: {"id":"a4cf4e1a-6f8b-4131-a4a0-14e40e58a2b3","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:07.916Z","results":[{"generated_text":"
+        of","generated_token_count":13,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"a38cfe5a-3466-4941-9005-ad7912c073e2"}
 
 
-        data: {"id":"12553bdf-3cfd-4b11-bd7b-286755213aae","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:16.238Z","results":[{"generated_text":"
-        individual","generated_token_count":14,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"b930f8a3-86e2-4a05-82a4-c69431ecefa7"}
+        data: {"id":"a4cf4e1a-6f8b-4131-a4a0-14e40e58a2b3","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:07.945Z","results":[{"generated_text":"
+        human","generated_token_count":14,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"a38cfe5a-3466-4941-9005-ad7912c073e2"}
 
 
-        data: {"id":"12553bdf-3cfd-4b11-bd7b-286755213aae","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:16.264Z","results":[{"generated_text":"
-        personalities","generated_token_count":15,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"b930f8a3-86e2-4a05-82a4-c69431ecefa7"}
+        data: {"id":"a4cf4e1a-6f8b-4131-a4a0-14e40e58a2b3","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:07.975Z","results":[{"generated_text":"
+        language","generated_token_count":15,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"a38cfe5a-3466-4941-9005-ad7912c073e2"}
 
 
-        data: {"id":"12553bdf-3cfd-4b11-bd7b-286755213aae","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:16.278Z","results":[{"generated_text":".","generated_token_count":16,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"b930f8a3-86e2-4a05-82a4-c69431ecefa7"}
+        data: {"id":"a4cf4e1a-6f8b-4131-a4a0-14e40e58a2b3","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:08.004Z","results":[{"generated_text":".","generated_token_count":16,"input_token_count":0,"stop_reason":"not_finished"}],"conversation_id":"a38cfe5a-3466-4941-9005-ad7912c073e2"}
 
 
-        data: {"id":"12553bdf-3cfd-4b11-bd7b-286755213aae","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:16.299Z","results":[{"generated_text":"","generated_token_count":17,"input_token_count":0,"stop_reason":"eos_token","seed":689128061}],"conversation_id":"b930f8a3-86e2-4a05-82a4-c69431ecefa7"}
+        data: {"id":"a4cf4e1a-6f8b-4131-a4a0-14e40e58a2b3","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:08.034Z","results":[{"generated_text":"","generated_token_count":17,"input_token_count":0,"stop_reason":"eos_token","seed":1374000926}],"conversation_id":"a38cfe5a-3466-4941-9005-ad7912c073e2"}
 
 
         event: close
@@ -99,16 +99,15 @@ interactions:
 
         '
     headers:
-      cache-control:
+      Cache-Control:
       - no-cache,no-transform
-      content-type:
+      Connection:
+      - keep-alive
+      Content-Type:
       - text/event-stream
-      date:
-      - Thu, 25 Jan 2024 15:50:15 GMT
-      set-cookie:
-      - 2eef5f4c257f6bca76e8da5586743beb=538060a726cc3a9c230fa5d1269356eb; path=/;
-        HttpOnly; Secure; SameSite=None
-      transfer-encoding:
+      Date:
+      - Wed, 06 Mar 2024 20:47:07 GMT
+      Transfer-Encoding:
       - chunked
       x-no-compression:
       - '1'
