--- a/tests/integration/prompt/cassettes/test_prompt_service/TestPromptService.test_create_delete_prompt.yaml
+++ b/tests/integration/prompt/cassettes/test_prompt_service/TestPromptService.test_create_delete_prompt.yaml
@@ -15,16 +15,16 @@ interactions:
       content-type:
       - application/json
     method: POST
-    uri: https://api.com/v2/prompts?version=2024-01-10
+    uri: https://api.com/v2/prompts?version=2024-03-06
   response:
     body:
-      string: '{"result":{"id":"1XMmtfCkFwj1cmhB","name":"My test prompt","data":{"meal":"goulash","author":"Shakespeare"},"input":"Write
-        the recipe for {{meal}} in the style of {{author}}","model_id":"google/flan-t5-xl","moderations":{},"created_at":"2024-02-24T21:10:25.000Z","updated_at":"2024-02-24T21:10:25.000Z","type":"private","public":false,"metadata":{"keywords":["meal","author"]},"tags":[],"author":{"id":453,"first_name":"Tomas","last_name":"Dvorak"},"usage_count":0}}'
+      string: '{"result":{"id":"Z0Iu1zWsgX3y3COE","name":"My test prompt","data":{"meal":"goulash","author":"Shakespeare"},"input":"Write
+        the recipe for {{meal}} in the style of {{author}}","model_id":"google/flan-t5-xl","moderations":{},"created_at":"2024-03-06T20:47:42.000Z","updated_at":"2024-03-06T20:47:42.000Z","type":"private","public":false,"metadata":{"keywords":["meal","author"]},"tags":[],"author":{"id":453,"first_name":"Tomas","last_name":"Dvorak"},"usage_count":0}}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Sat, 24 Feb 2024 21:10:24 GMT
+      - Wed, 06 Mar 2024 20:47:42 GMT
       Keep-Alive:
       - timeout=72
       content-length:
@@ -32,7 +32,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2024-01-10'
+      - '2024-03-06'
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -54,16 +54,16 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/prompts/1XMmtfCkFwj1cmhB?version=2024-01-10
+    uri: https://api.com/v2/prompts/Z0Iu1zWsgX3y3COE?version=2024-03-06
   response:
     body:
-      string: '{"result":{"id":"1XMmtfCkFwj1cmhB","name":"My test prompt","data":{"meal":"goulash","author":"Shakespeare"},"input":"Write
-        the recipe for {{meal}} in the style of {{author}}","model_id":"google/flan-t5-xl","moderations":{},"created_at":"2024-02-24T21:10:25.000Z","updated_at":"2024-02-24T21:10:25.000Z","type":"private","public":false,"metadata":{"keywords":["meal","author"]},"tags":[],"author":{"id":453,"first_name":"Tomas","last_name":"Dvorak"},"usage_count":0}}'
+      string: '{"result":{"id":"Z0Iu1zWsgX3y3COE","name":"My test prompt","data":{"meal":"goulash","author":"Shakespeare"},"input":"Write
+        the recipe for {{meal}} in the style of {{author}}","model_id":"google/flan-t5-xl","moderations":{},"created_at":"2024-03-06T20:47:42.000Z","updated_at":"2024-03-06T20:47:42.000Z","type":"private","public":false,"metadata":{"keywords":["meal","author"]},"tags":[],"author":{"id":453,"first_name":"Tomas","last_name":"Dvorak"},"usage_count":0}}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Sat, 24 Feb 2024 21:10:25 GMT
+      - Wed, 06 Mar 2024 20:47:43 GMT
       Keep-Alive:
       - timeout=72
       content-length:
@@ -71,7 +71,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2024-01-10'
+      - '2024-03-06'
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -86,7 +86,7 @@ interactions:
 - request:
     body: '{"parameters": {"return_options": {"generated_tokens": false, "input_text":
       true, "input_tokens": false, "token_logprobs": false, "token_ranks": false}},
-      "prompt_id": "1XMmtfCkFwj1cmhB"}'
+      "prompt_id": "Z0Iu1zWsgX3y3COE"}'
     headers:
       accept:
       - '*/*'
@@ -102,18 +102,18 @@ interactions:
     uri: https://api.com/v2/text/generation?version=2024-01-10
   response:
     body:
-      string: '{"id":"fec8f279-4be9-4332-b764-4ac389cf663d","model_id":"google/flan-t5-xl","created_at":"2024-02-24T21:10:27.147Z","results":[{"input_text":"Write
-        the recipe for goulash in the style of Shakespeare","generated_text":"Coat
-        a 9-inch heavy-based, 4-quart slow cooker with oil. Combine onion","generated_token_count":20,"input_token_count":13,"stop_reason":"max_tokens","seed":3015852922}]}'
+      string: '{"id":"ad288f4c-0036-42dd-b635-1491fefeb617","model_id":"google/flan-t5-xl","created_at":"2024-03-06T20:47:44.606Z","results":[{"input_text":"Write
+        the recipe for goulash in the style of Shakespeare","generated_text":"Stew
+        1/4 tsp garlic In a large saucepan, Combine 1 1/2 c flour","generated_token_count":20,"input_token_count":13,"stop_reason":"max_tokens","seed":3058244542}]}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Sat, 24 Feb 2024 21:10:27 GMT
+      - Wed, 06 Mar 2024 20:47:44 GMT
       Keep-Alive:
       - timeout=72
       content-length:
-      - '387'
+      - '379'
       content-type:
       - application/json; charset=utf-8
       content-version:
@@ -133,7 +133,7 @@ interactions:
       connection:
       - keep-alive
     method: DELETE
-    uri: https://api.com/v2/prompts/1XMmtfCkFwj1cmhB?version=2023-11-22
+    uri: https://api.com/v2/prompts/Z0Iu1zWsgX3y3COE?version=2023-11-22
   response:
     body:
       string: ''
@@ -141,7 +141,7 @@ interactions:
       Connection:
       - keep-alive
       Date:
-      - Sat, 24 Feb 2024 21:10:27 GMT
+      - Wed, 06 Mar 2024 20:47:45 GMT
       Keep-Alive:
       - timeout=72
       content-version:
@@ -165,7 +165,7 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/prompts?search=My%20test%20prompt&model_id=google%2Fflan-t5-xl&version=2024-01-10
+    uri: https://api.com/v2/prompts?search=My%20test%20prompt&model_id=google%2Fflan-t5-xl&version=2024-03-06
   response:
     body:
       string: '{"results":[],"total_count":0}'
@@ -173,7 +173,7 @@ interactions:
       Connection:
       - keep-alive
       Date:
-      - Sat, 24 Feb 2024 21:10:28 GMT
+      - Wed, 06 Mar 2024 20:47:46 GMT
       Keep-Alive:
       - timeout=72
       content-length:
@@ -181,7 +181,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2024-01-10'
+      - '2024-03-06'
       vary:
       - accept-encoding
       x-ratelimit-limit:
