--- a/tests/integration/extensions/cassettes/test_llama_index/TestLlamaIndex.test_llama_index_chat.yaml
+++ b/tests/integration/extensions/cassettes/test_llama_index/TestLlamaIndex.test_llama_index_chat.yaml
@@ -21,26 +21,25 @@ interactions:
       content-type:
       - application/json
     method: POST
-    uri: https://api.com/v2/text/chat?version=2024-01-10
+    uri: https://api.com/v2/text/chat?version=2024-03-06
   response:
     body:
-      string: '{"id":"9c7894b0-0cf8-4e86-bc2c-7be31abb7814","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:15.508Z","results":[{"generated_text":"NLP
-        refers to using interactions with children to help them improve consciousness
-        eating.","generated_token_count":17,"input_token_count":130,"stop_reason":"eos_token","seed":1735387020}],"conversation_id":"6c165af3-8135-47e6-9d5c-fa98cf2b8747"}'
+      string: '{"id":"1c768798-c088-4e13-ba76-30a7f52786a6","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:06.563Z","results":[{"generated_text":"Neurolinguistic
+        programming, also known as NLP, is a set of techniques for modeling human
+        language","generated_token_count":20,"input_token_count":130,"stop_reason":"max_tokens","seed":585218733}],"conversation_id":"c37fa8c3-5fb5-46bf-8046-81bcbb1148c2"}'
     headers:
+      Connection:
+      - keep-alive
+      Date:
+      - Wed, 06 Mar 2024 20:47:06 GMT
+      Keep-Alive:
+      - timeout=72
       content-length:
-      - '389'
+      - '398'
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2024-01-10'
-      date:
-      - Thu, 25 Jan 2024 15:50:15 GMT
-      keep-alive:
-      - timeout=72
-      set-cookie:
-      - 2eef5f4c257f6bca76e8da5586743beb=700aa432de0b7f84c4af912348660ec2; path=/;
-        HttpOnly; Secure; SameSite=None
+      - '2024-03-06'
       vary:
       - accept-encoding
     status:
