--- a/tests/integration/extensions/cassettes/test_llama_index/TestLlamaIndex.test_llama_index_complete_stream.yaml
+++ b/tests/integration/extensions/cassettes/test_llama_index/TestLlamaIndex.test_llama_index_complete_stream.yaml
@@ -22,38 +22,56 @@ interactions:
       string: 'retry: 3000
 
 
-        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.497Z","results":[{"generated_text":"","generated_token_count":0,"input_token_count":13,"stop_reason":"not_finished","seed":372882511}]}
+        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.611Z","results":[{"generated_text":"","generated_token_count":0,"input_token_count":13,"stop_reason":"not_finished","seed":4105291987}]}
 
 
-        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.539Z","results":[{"generated_text":"Hey","generated_token_count":1,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.662Z","results":[{"generated_text":"Nice","generated_token_count":1,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.563Z","results":[{"generated_text":",","generated_token_count":2,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.692Z","results":[{"generated_text":".","generated_token_count":2,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.584Z","results":[{"generated_text":"
-        Mike","generated_token_count":3,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.721Z","results":[{"generated_text":"
+        I","generated_token_count":3,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.605Z","results":[{"generated_text":".","generated_token_count":4,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.751Z","results":[{"generated_text":"''","generated_token_count":4,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.626Z","results":[{"generated_text":"
-        Not","generated_token_count":5,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.780Z","results":[{"generated_text":"m","generated_token_count":5,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.647Z","results":[{"generated_text":"
-        so","generated_token_count":6,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.810Z","results":[{"generated_text":"
+        setting","generated_token_count":6,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.667Z","results":[{"generated_text":"
-        great","generated_token_count":7,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.839Z","results":[{"generated_text":"
+        up","generated_token_count":7,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.688Z","results":[{"generated_text":".","generated_token_count":8,"input_token_count":0,"stop_reason":"not_finished"}]}
+        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.869Z","results":[{"generated_text":"
+        for","generated_token_count":8,"input_token_count":0,"stop_reason":"not_finished"}]}
 
 
-        data: {"id":"f8ea0183-ae40-407f-9741-f41bf013f65b","model_id":"google/flan-ul2","created_at":"2024-01-25T15:50:14.707Z","results":[{"generated_text":"","generated_token_count":9,"input_token_count":0,"stop_reason":"eos_token","seed":372882511}]}
+        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.900Z","results":[{"generated_text":"
+        3","generated_token_count":9,"input_token_count":0,"stop_reason":"not_finished"}]}
+
+
+        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.930Z","results":[{"generated_text":"
+        rehearsal","generated_token_count":10,"input_token_count":0,"stop_reason":"not_finished"}]}
+
+
+        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.958Z","results":[{"generated_text":"s","generated_token_count":11,"input_token_count":0,"stop_reason":"not_finished"}]}
+
+
+        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:04.987Z","results":[{"generated_text":"
+        today","generated_token_count":12,"input_token_count":0,"stop_reason":"not_finished"}]}
+
+
+        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:05.016Z","results":[{"generated_text":".","generated_token_count":13,"input_token_count":0,"stop_reason":"not_finished"}]}
+
+
+        data: {"id":"e8d66f31-d26c-44b3-b9a6-c76480613b77","model_id":"google/flan-ul2","created_at":"2024-03-06T20:47:05.046Z","results":[{"generated_text":"","generated_token_count":14,"input_token_count":0,"stop_reason":"eos_token","seed":4105291987}]}
 
 
         event: close
@@ -61,16 +79,15 @@ interactions:
 
         '
     headers:
-      cache-control:
+      Cache-Control:
       - no-cache,no-transform
-      content-type:
+      Connection:
+      - keep-alive
+      Content-Type:
       - text/event-stream
-      date:
-      - Thu, 25 Jan 2024 15:50:14 GMT
-      set-cookie:
-      - 2eef5f4c257f6bca76e8da5586743beb=538060a726cc3a9c230fa5d1269356eb; path=/;
-        HttpOnly; Secure; SameSite=None
-      transfer-encoding:
+      Date:
+      - Wed, 06 Mar 2024 20:47:04 GMT
+      Transfer-Encoding:
       - chunked
       x-no-compression:
       - '1'
