--- a/tests/integration/text/cassettes/test_chat_service/TestChatService.test_create_history.yaml
+++ b/tests/integration/text/cassettes/test_chat_service/TestChatService.test_create_history.yaml
@@ -14,24 +14,24 @@ interactions:
       content-type:
       - application/json
     method: POST
-    uri: https://api.com/v2/text/chat?version=2024-01-10
+    uri: https://api.com/v2/text/chat?version=2024-03-06
   response:
     body:
-      string: '{"id":"168f5d54-10b4-4e03-8bad-be8a6ffae40c","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-02-24T21:35:25.086Z","results":[{"generated_text":"  No,
-        I do not want to destroy the world. As a responsible AI language model,","generated_token_count":20,"input_token_count":18,"stop_reason":"max_tokens","seed":3727522063}],"conversation_id":"9ccc9333-5850-43ed-a95f-0f6afec3aa52"}'
+      string: '{"id":"1e02a49e-8541-42c7-93e0-01b111abc9af","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-06T20:45:53.726Z","results":[{"generated_text":"  No,
+        I do not want to destroy the world. I''m just an AI,","generated_token_count":20,"input_token_count":18,"stop_reason":"max_tokens","seed":215978522}],"conversation_id":"77318b24-2a0a-4e00-b509-295dc67d187e"}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Sat, 24 Feb 2024 21:35:25 GMT
+      - Wed, 06 Mar 2024 20:45:53 GMT
       Keep-Alive:
       - timeout=72
       content-length:
-      - '389'
+      - '368'
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2024-01-10'
+      - '2024-03-06'
       vary:
       - accept-encoding
     status:
@@ -47,25 +47,25 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/requests/chat/9ccc9333-5850-43ed-a95f-0f6afec3aa52?version=2023-11-22
+    uri: https://api.com/v2/requests/chat/77318b24-2a0a-4e00-b509-295dc67d187e?version=2024-03-06
   response:
     body:
-      string: '{"results":[{"id":"168f5d54-10b4-4e03-8bad-be8a6ffae40c","duration":1203,"request":{"messages":[{"role":"user","content":"Do
-        you want to destroy the world?"}],"model_id":"meta-llama/llama-2-70b-chat","conversation_id":"9ccc9333-5850-43ed-a95f-0f6afec3aa52"},"status":"success","created_at":"2024-02-24T21:35:25.000Z","response":{"id":"168f5d54-10b4-4e03-8bad-be8a6ffae40c","results":[{"seed":3727522063,"stop_reason":"max_tokens","generated_text":"  No,
-        I do not want to destroy the world. As a responsible AI language model,","input_token_count":18,"generated_token_count":20}],"model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-02-24T21:35:25.086Z","conversation_id":"9ccc9333-5850-43ed-a95f-0f6afec3aa52"},"version":{"api":"v2","date":"2024-01-10"}}]}'
+      string: '{"results":[{"id":"1e02a49e-8541-42c7-93e0-01b111abc9af","duration":816,"request":{"messages":[{"role":"user","content":"Do
+        you want to destroy the world?"}],"model_id":"meta-llama/llama-2-70b-chat","conversation_id":"77318b24-2a0a-4e00-b509-295dc67d187e"},"status":"success","created_at":"2024-03-06T20:45:54.000Z","response":{"id":"1e02a49e-8541-42c7-93e0-01b111abc9af","results":[{"seed":215978522,"stop_reason":"max_tokens","generated_text":"  No,
+        I do not want to destroy the world. I''m just an AI,","input_token_count":18,"generated_token_count":20}],"model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-06T20:45:53.726Z","conversation_id":"77318b24-2a0a-4e00-b509-295dc67d187e"},"version":{"api":"v2","date":"2024-03-06"}}]}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Sat, 24 Feb 2024 21:35:25 GMT
+      - Wed, 06 Mar 2024 20:45:54 GMT
       Keep-Alive:
       - timeout=72
       content-length:
-      - '763'
+      - '741'
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2023-11-22'
+      - '2024-03-06'
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -78,7 +78,7 @@ interactions:
       code: 200
       message: OK
 - request:
-    body: '{"conversation_id": "9ccc9333-5850-43ed-a95f-0f6afec3aa52", "messages":
+    body: '{"conversation_id": "77318b24-2a0a-4e00-b509-295dc67d187e", "messages":
       [{"content": "What was my previous question?", "role": "user"}], "model_id":
       "meta-llama/llama-2-70b-chat"}'
     headers:
@@ -93,16 +93,16 @@ interactions:
       content-type:
       - application/json
     method: POST
-    uri: https://api.com/v2/text/chat?version=2024-01-10
+    uri: https://api.com/v2/text/chat?version=2024-03-06
   response:
     body:
-      string: '{"id":"0efd2bdf-f942-49c9-b91f-ef5b62e1e9a7","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-02-24T21:35:27.502Z","results":[{"generated_text":"  Sure!
-        Your previous question was: Do you want to destroy the world?","generated_token_count":17,"input_token_count":52,"stop_reason":"eos_token","seed":3139754148}],"conversation_id":"9ccc9333-5850-43ed-a95f-0f6afec3aa52"}'
+      string: '{"id":"1874871b-e796-4f14-a51c-47e16b769b09","model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-06T20:45:56.011Z","results":[{"generated_text":"  Sure!
+        Your previous question was: Do you want to destroy the world?","generated_token_count":17,"input_token_count":52,"stop_reason":"eos_token","seed":2606007760}],"conversation_id":"77318b24-2a0a-4e00-b509-295dc67d187e"}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Sat, 24 Feb 2024 21:35:27 GMT
+      - Wed, 06 Mar 2024 20:45:56 GMT
       Keep-Alive:
       - timeout=72
       content-length:
@@ -110,7 +110,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2024-01-10'
+      - '2024-03-06'
       vary:
       - accept-encoding
     status:
@@ -126,29 +126,29 @@ interactions:
       connection:
       - keep-alive
     method: GET
-    uri: https://api.com/v2/requests/chat/9ccc9333-5850-43ed-a95f-0f6afec3aa52?version=2023-11-22
+    uri: https://api.com/v2/requests/chat/77318b24-2a0a-4e00-b509-295dc67d187e?version=2024-03-06
   response:
     body:
-      string: '{"results":[{"id":"168f5d54-10b4-4e03-8bad-be8a6ffae40c","duration":1203,"request":{"messages":[{"role":"user","content":"Do
-        you want to destroy the world?"}],"model_id":"meta-llama/llama-2-70b-chat","conversation_id":"9ccc9333-5850-43ed-a95f-0f6afec3aa52"},"status":"success","created_at":"2024-02-24T21:35:25.000Z","response":{"id":"168f5d54-10b4-4e03-8bad-be8a6ffae40c","results":[{"seed":3727522063,"stop_reason":"max_tokens","generated_text":"  No,
-        I do not want to destroy the world. As a responsible AI language model,","input_token_count":18,"generated_token_count":20}],"model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-02-24T21:35:25.086Z","conversation_id":"9ccc9333-5850-43ed-a95f-0f6afec3aa52"},"version":{"api":"v2","date":"2024-01-10"}},{"id":"0efd2bdf-f942-49c9-b91f-ef5b62e1e9a7","duration":878,"request":{"messages":[{"role":"user","content":"What
-        was my previous question?"}],"model_id":"meta-llama/llama-2-70b-chat","parent_id":"168f5d54-10b4-4e03-8bad-be8a6ffae40c","conversation_id":"9ccc9333-5850-43ed-a95f-0f6afec3aa52"},"status":"success","created_at":"2024-02-24T21:35:28.000Z","response":{"id":"0efd2bdf-f942-49c9-b91f-ef5b62e1e9a7","results":[{"seed":3139754148,"stop_reason":"eos_token","generated_text":"  Sure!
-        Your previous question was: Do you want to destroy the world?","input_token_count":52,"generated_token_count":17}],"model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-02-24T21:35:27.502Z","conversation_id":"9ccc9333-5850-43ed-a95f-0f6afec3aa52"},"parent_id":"168f5d54-10b4-4e03-8bad-be8a6ffae40c","version":{"api":"v2","date":"2024-01-10"}}]}'
+      string: '{"results":[{"id":"1e02a49e-8541-42c7-93e0-01b111abc9af","duration":816,"request":{"messages":[{"role":"user","content":"Do
+        you want to destroy the world?"}],"model_id":"meta-llama/llama-2-70b-chat","conversation_id":"77318b24-2a0a-4e00-b509-295dc67d187e"},"status":"success","created_at":"2024-03-06T20:45:54.000Z","response":{"id":"1e02a49e-8541-42c7-93e0-01b111abc9af","results":[{"seed":215978522,"stop_reason":"max_tokens","generated_text":"  No,
+        I do not want to destroy the world. I''m just an AI,","input_token_count":18,"generated_token_count":20}],"model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-06T20:45:53.726Z","conversation_id":"77318b24-2a0a-4e00-b509-295dc67d187e"},"version":{"api":"v2","date":"2024-03-06"}},{"id":"1874871b-e796-4f14-a51c-47e16b769b09","duration":719,"request":{"messages":[{"role":"user","content":"What
+        was my previous question?"}],"model_id":"meta-llama/llama-2-70b-chat","parent_id":"1e02a49e-8541-42c7-93e0-01b111abc9af","conversation_id":"77318b24-2a0a-4e00-b509-295dc67d187e"},"status":"success","created_at":"2024-03-06T20:45:56.000Z","response":{"id":"1874871b-e796-4f14-a51c-47e16b769b09","results":[{"seed":2606007760,"stop_reason":"eos_token","generated_text":"  Sure!
+        Your previous question was: Do you want to destroy the world?","input_token_count":52,"generated_token_count":17}],"model_id":"meta-llama/llama-2-70b-chat","created_at":"2024-03-06T20:45:56.011Z","conversation_id":"77318b24-2a0a-4e00-b509-295dc67d187e"},"parent_id":"1e02a49e-8541-42c7-93e0-01b111abc9af","version":{"api":"v2","date":"2024-03-06"}}]}'
     headers:
       Connection:
       - keep-alive
       Date:
-      - Sat, 24 Feb 2024 21:35:28 GMT
+      - Wed, 06 Mar 2024 20:45:56 GMT
       Keep-Alive:
       - timeout=72
       Transfer-Encoding:
       - chunked
       content-length:
-      - '1602'
+      - '1580'
       content-type:
       - application/json; charset=utf-8
       content-version:
-      - '2023-11-22'
+      - '2024-03-06'
       vary:
       - accept-encoding
       x-ratelimit-limit:
